--- a/me.sheharyar.scripts.tree.plist
+++ b/me.sheharyar.scripts.tree.plist
@@ -10,9 +10,11 @@
     </array>
     <key>StartInterval</key>
     <integer>300</integer>
+    <key>RunAtLoad</key>
+    <true/>
     <key>StandardOutPath</key>
-    <string>/Users/Psy/.trees/logs/stdout.log</string>
+    <string>/Users/Psy/.trees/stdout.log</string>
     <key>StandardErrorPath</key>
-    <string>/Users/Psy/.trees/logs/stderr.log</string>
+    <string>/Users/Psy/.trees/stderr.log</string>
 </dict>
 </plist>
